--- a/.github/workflows/go-validate.yml
+++ b/.github/workflows/go-validate.yml
@@ -13,7 +13,7 @@ permissions:
 
 jobs:
   get-go-version:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     outputs:
       go-version: ${{ steps.get-go-version.outputs.go-version }}
     steps:
