--- a/.github/workflows/go-test-linux.yml
+++ b/.github/workflows/go-test-linux.yml
@@ -14,7 +14,7 @@ permissions:
 
 jobs:
   get-go-version:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     outputs:
       go-version: ${{ steps.get-go-version.outputs.go-version }}
     steps:
