--- a/.github/workflows/go-validate.yml
+++ b/.github/workflows/go-validate.yml
@@ -26,7 +26,7 @@ jobs:
   check-mod-tidy:
     needs:
       - get-go-version
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     name: Go Mod Tidy
     steps:
       - uses: actions/checkout@v4
@@ -37,7 +37,7 @@ jobs:
   check-lint:
     needs:
       - get-go-version
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     name: Lint check
     steps:
       - uses: actions/checkout@v4
@@ -51,7 +51,7 @@ jobs:
   check-fmt:
     needs:
       - get-go-version
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     name: Gofmt check
     steps:
       - uses: actions/checkout@v4
@@ -69,7 +69,7 @@ jobs:
   check-generate:
     needs:
       - get-go-version
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     name: Generate check
     steps:
       - uses: actions/checkout@v4
