--- a/.github/workflows/test-plugin-example.yml
+++ b/.github/workflows/test-plugin-example.yml
@@ -18,7 +18,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     name: init and build example
     steps:
       - name: Checkout Repository
