--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -19,8 +19,8 @@ builds:
       post:
         # This will check plugin compatibility against latest version of Packer
         - cmd: |
-            go install github.com/hashicorp/packer/cmd/packer-plugins-check@latest &&
-            packer-plugins-check -load={{ .Name }}
+            go install github.com/hashicorp/packer-plugin-sdk/cmd/packer-sdc@latest@latest &&
+            packer-sdc plugin-check {{ .Name }}
           dir: "{{ dir .Path}}"
     flags:
       - -trimpath # removes all file system paths from the compiled executable
