--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -19,7 +19,7 @@ builds:
       post:
         # This will check plugin compatibility against latest version of Packer
         - cmd: |
-            go install github.com/hashicorp/packer-plugin-sdk/cmd/packer-sdc@latest@latest &&
+            go install github.com/hashicorp/packer-plugin-sdk/cmd/packer-sdc@latest &&
             packer-sdc plugin-check {{ .Name }}
           dir: "{{ dir .Path}}"
     flags:
