--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,19 +1,19 @@
 # This GitHub action can publish assets for release when a tag is created.
 # Currently its setup to run on any tag that matches the pattern "v*" (ie. v0.1.0).
 #
-# This uses an action (hashicorp/ghaction-import-gpg) that assumes you set your
-# private key in the `GPG_PRIVATE_KEY` secret and passphrase in the `PASSPHRASE`
-# secret. If you would rather own your own GPG handling, please fork this action
-# or use an alternative one for key handling.
-#
-# You will need to pass the `--batch` flag to `gpg` in your signing step
-# in `goreleaser` to indicate this is being used in a non-interactive mode.
-#
 name: release
 on:
   push:
     tags:
-      - 'v1.0.0'
+      - 'v*'
+  workflow_call:
+    secrets:
+      PASSPHRASE:
+        description: 'A GPG Key passphrase passed from the caller workflow'
+        required: false
+      FINGERPRINT:
+        description: 'A GPG Key fingerprint passed from the caller workflow'
+        required: false
 jobs:
   get-go-version:
     runs-on: self-hosted
@@ -42,12 +42,6 @@ jobs:
       - name: Describe plugin
         id: plugin_describe
         run: echo "::set-output name=api_version::$(go run . describe | jq -r '.api_version')"
-      # - name: Import GPG key
-      #   id: import_gpg
-      #   uses: hashicorp/ghaction-import-gpg@v2.1.0
-      #   env:
-      #     GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-      #     PASSPHRASE: ${{ secrets.PASSPHRASE }}
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
         with:
