--- a/.github/workflows/go-test-linux.yml
+++ b/.github/workflows/go-test-linux.yml
@@ -14,7 +14,7 @@ permissions:
 
 jobs:
   get-go-version:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     outputs:
       go-version: ${{ steps.get-go-version.outputs.go-version }}
     steps:
@@ -27,7 +27,7 @@ jobs:
   linux-go-tests:
     needs:
       - get-go-version
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     name: Linux Go tests
     steps:
       - uses: actions/checkout@v4
