--- a/.github/workflows/go-validate.yml
+++ b/.github/workflows/go-validate.yml
@@ -45,6 +45,9 @@ jobs:
         with:
           go-version: ${{ needs.get-go-version.outputs.go-version }}
           check-latest: true
+      - run: |
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/HEAD/install.sh | sh -s -- -b $(go env GOPATH)/bin v2.1.2
+          golangci-lint --version
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v7
         with:
