--- a/.github/workflows/go-validate.yml
+++ b/.github/workflows/go-validate.yml
@@ -2,7 +2,7 @@
 # This GitHub action runs basic linting checks for Packer.
 #
 
-name: "Go Validate"
+name: "Go Validation"
 
 on:
   push:
@@ -45,6 +45,10 @@ jobs:
         with:
           go-version: ${{ needs.get-go-version.outputs.go-version }}
           check-latest: true
+      - name: Update golangci-lint
+        run: |
+           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/HEAD/install.sh | sh -s -- -b $(go env GOPATH)/bin v2.1.2
+           golangci-lint --version
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v7
         with:
