--- a/.github/workflows/go-validate.yml
+++ b/.github/workflows/go-validate.yml
@@ -2,7 +2,7 @@
 # This GitHub action runs basic linting checks for Packer.
 #
 
-name: "Go Validate"
+name: "Go Validation"
 
 on:
   push:
@@ -13,7 +13,7 @@ permissions:
 
 jobs:
   get-go-version:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     outputs:
       go-version: ${{ steps.get-go-version.outputs.go-version }}
     steps:
