--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,14 @@ on:
       FINGERPRINT:
         description: 'A GPG Key fingerprint passed from the caller workflow'
         required: false
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'     
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Test scenario tags'
 jobs:
   get-go-version:
     runs-on: ubuntu-latest
@@ -36,7 +44,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Unshallow
-        run: git fetch --prune --unshallow
+        run: git fetch --prune
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
