--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Unshallow
+      - name: Git Fetch
         run: git fetch --prune
       - name: Set up Go
         uses: actions/setup-go@v5
